# interleave-rs

./: Cargo.toml  README.md  makefile
examples/: many.rs  simple.rs  two.rs
src/: lib.rs
